objects/ACE_Compliance_Vetting__c.object
<CustomObject>
    <description>Price Change Process UI</description>
    <fields>
        <fullName>IN_CREATED_BY__c</fullName>
        <label>IN CREATED BY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_CREATION_DATE__c</fullName>
        <label>IN CREATION DATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Corelist_ID__c</fullName>
        <label>IN Corelist ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Corelist_Indicator__c</fullName>
        <label>IN Corelist Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_LAST_UPDATE_BY__c</fullName>
        <label>IN LAST UPDATE BY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_LAST_UPDATE_DATE__c</fullName>
        <label>IN LAST UPDATE DATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_ORG_ID__c</fullName>
        <label>IN ORG ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Owning_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>IN Owning Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Owning_Customer_Type__c</fullName>
        <label>IN Owning Customer Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Private_Brand__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>IN Private Brand</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Running_Quarter__c</fullName>
        <label>IN Running Quarter</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_SKU_Class__c</fullName>
        <label>IN SKU Class</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_SKU_Dept__c</fullName>
        <label>IN SKU Dept</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_SKU_Division__c</fullName>
        <label>IN_SKU Division</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_SKU_Group__c</fullName>
        <label>IN SKU Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_SKU_ID__c</fullName>
        <label>IN SKU ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Sku_SubClass__c</fullName>
        <label>IN Sku SubClass</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Addition_communication_requirements__c</fullName>
        <label>OUT_Addition_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Agreement_Start_Date__c</fullName>
        <label>OUT Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUT_CC_Initial_Freeze_Period_in_days__c</fullName>
        <label>OUT_CC_Initial_Freeze_Period_in_days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_CC_Prc_Chg_Notice_Reqd_days__c</fullName>
        <label>OUT_CC_Prc_Chg_Notice_Reqd_days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_CC_Price_Incr_Capped__c</fullName>
        <label>OUT_CC_Price_Incr_Capped</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Calendar_period__c</fullName>
        <label>OUT_Calendar_period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Specific date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Cap_Amount__c</fullName>
        <label>OUT Cap Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_Cap_Calculation_Base__c</fullName>
        <label>OUT Cap Calculation Base</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Cap_Format__c</fullName>
        <label>OUT Cap Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Cap_Scope__c</fullName>
        <label>OUT Cap Scope</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Cap_Units__c</fullName>
        <label>OUT Cap Units</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Comm_Req_CC_Price_Chg__c</fullName>
        <label>OUT_Comm_Req_CC_Price_Chg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Notification only</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Complex_cap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OUT_Complex_cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUT_Compliance_Vetting_Contract_Number__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_Compliance_Vetting_Contract_Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Compliance_Vetting_Customer__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_Compliance_Vetting_Customer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Compliance_Vetting_Pricing_Term__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_Compliance_Vetting_Pricing_Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Contract_Type__c</fullName>
        <label>OUT Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_DISCO_communication_requirements__c</fullName>
        <label>OUT_DISCO_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Date_1__c</fullName>
        <label>OUT_Date_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUT_Date_2__c</fullName>
        <label>OUT_Date_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUT_Date_3__c</fullName>
        <label>OUT_Date_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUT_Deletion_communication_requirements__c</fullName>
        <label>OUT_Deletion_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Departments__c</fullName>
        <label>OUT_Departments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - FURNITURE</fullName>
                </value>
                <value>
                    <fullName>03 - BINDERS</fullName>
                </value>
                <value>
                    <fullName>04 - DATED AND FORMS</fullName>
                </value>
                <value>
                    <fullName>05 - PAPER</fullName>
                </value>
                <value>
                    <fullName>06 - MAILROOM/SHIPPING</fullName>
                </value>
                <value>
                    <fullName>07 - SCHOOL SUPPLIES</fullName>
                </value>
                <value>
                    <fullName>08 - LIGHTING</fullName>
                </value>
                <value>
                    <fullName>09 - PC ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>10 - DESKTOP COMPUTERS</fullName>
                </value>
                <value>
                    <fullName>11 - WRITING</fullName>
                </value>
                <value>
                    <fullName>12 - SPECIALTY PAPER</fullName>
                </value>
                <value>
                    <fullName>13 - NOTETAKING</fullName>
                </value>
                <value>
                    <fullName>14 - INKJET CARTRIDGES</fullName>
                </value>
                <value>
                    <fullName>16 - PRINTERS</fullName>
                </value>
                <value>
                    <fullName>17 - BUSINESS COMMUNICATION</fullName>
                </value>
                <value>
                    <fullName>18 - SHRED/STORE SERVICES</fullName>
                </value>
                <value>
                    <fullName>19 - MOBILITY</fullName>
                </value>
                <value>
                    <fullName>20 - PERFORMANCE PP SRVC</fullName>
                </value>
                <value>
                    <fullName>21 - FLASH STORAGE</fullName>
                </value>
                <value>
                    <fullName>22 - MARKETING SERVICES</fullName>
                </value>
                <value>
                    <fullName>23 - SAFETY, SECURITY, AND MEDICAL</fullName>
                </value>
                <value>
                    <fullName>24 - OFFICE ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>25 - SEATING</fullName>
                </value>
                <value>
                    <fullName>26 - SEASONAL PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>27 - SHREDDERS</fullName>
                </value>
                <value>
                    <fullName>28 - FILING</fullName>
                </value>
                <value>
                    <fullName>29 - CUSTOM OUTSOURC PRNT</fullName>
                </value>
                <value>
                    <fullName>30 - DELIVERY CHARGES</fullName>
                </value>
                <value>
                    <fullName>31 - K-12</fullName>
                </value>
                <value>
                    <fullName>32 - CUSTOM IN HOUSE PRNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Disco_Alt_Price_Req__c</fullName>
        <label>OUT Disco Alt Price Req</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Effective_Date_of_this_Language__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_Effective_Date_of_this_Language</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUT_Error_Code__c</fullName>
        <label>OUT_Error_Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Error_Message__c</fullName>
        <label>OUT Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_First_Order_Date__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_First_Order_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUT_Grand_Parent_Hosted_Catalog__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_Grand_Parent_Hosted_Catalog</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_How_frequently_can_we_pass_increases__c</fullName>
        <label>OUT_How_frequently_can_we_pass_increases</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_In_days__c</fullName>
        <label>OUT_In_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_Initial_Price_Freeze_Period__c</fullName>
        <label>OUT Initial Price Freeze Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Is_Cap_Lesser_Of_Two_Values__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_Is_Cap_Lesser_Of_Two_Values</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Is_There_A_Cap__c</fullName>
        <description>Field from ACE</description>
        <label>OUT_Is_There_A_Cap</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Is_there_language_stating_applicable__c</fullName>
        <label>OUT_Is_there_language_stating_applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Other_calendar_period__c</fullName>
        <label>OUT_Other_calendar_period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Owning_Customer_Annual_Sales__c</fullName>
        <label>OUT_Owning Customer Annual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUT_Price_Incr_Cap_App_Level__c</fullName>
        <label>OUT_Price_Incr_Cap_App_Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Discrete SKU</fullName>
                </value>
                <value>
                    <fullName>Aggregate of SKUs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Required_Timing_Of_CC_Updates__c</fullName>
        <label>OUT_Required_Timing_Of_CC_Updates</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Requirement_Window__c</fullName>
        <label>OUT Requirement Window</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Response_Completion_Date__c</fullName>
        <label>OUT Response Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OUT_SFDC_Contract_Obj_Cust_ID__c</fullName>
        <label>OUT SFDC Contract Obj Cust ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_SFDC_Contract_Object_ID__c</fullName>
        <label>OUT SFDC Contract Object ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_SFDC_Notification_Flag__c</fullName>
        <label>OUT_SFDC Notification Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_SKU_Active_Written_Agreement__c</fullName>
        <description>Contract Y/N</description>
        <formula>IF(Type__c == &apos;Response&apos;,&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Y/N</inlineHelpText>
        <label>OUT_SKU_Active_Written_Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_SKU_Add_Notif_Req__c</fullName>
        <label>OUT SKU Add Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_SKU_Del_Notif_Req__c</fullName>
        <label>OUT SKU Del Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_SKU_Disco_Alt_Req__c</fullName>
        <label>OUT SKU Disco Alt Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_SKU_Disco_Cust_Notif_Req__c</fullName>
        <label>OUT SKU Disco Cust Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Update_Frequency__c</fullName>
        <label>OUT Update Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Update_Timing__c</fullName>
        <label>OUT Update Timing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_Vendor_Letter_Req_For_CC_Increase__c</fullName>
        <label>OUT_Vendor_Letter_Req_For_CC_Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Upon request</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUT_Vendor_Letter_Required__c</fullName>
        <label>OUT Vendor Letter Required</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_KEY__c</fullName>
        <label>REQUEST KEY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCC_ENGINE_CONTROL_ID__c</fullName>
        <label>VCC ENGINE CONTROL ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XREF_REQUEST_ID__c</fullName>
        <label>XREF REQUEST ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ACE Compliance Vetting</label>
    <nameField>
        <label>ACE Compliance Vetting  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACE Compliance Vettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>